package solidexercicio10.model;

public interface Movel {
    void mover(int dx, int dy);
}
